--- a/Joke_Bot_(P_01).ipynb
+++ b/Joke_Bot_(P_01).ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Abdullah-Khan-1992/Demo/blob/main/Joke_Bot_(P_01).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Abdullah-Khan-1992/Piaic/blob/main/Joke_Bot_(P_01).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -64,12 +64,70 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Problem Statement\n",
+        "Write a program that asks a user to enter a number. Your program will then double that number and print out the result. It will repeat that process until the value is 100 or greater.\n",
+        "\n",
+        "For example if the user enters the number 2 you would then print:\n",
+        "\n",
+        "4 8 16 32 64 128\n",
+        "\n",
+        "Note that:\n",
+        "\n",
+        "2 doubled is 4\n",
+        "\n",
+        "4 doubled is 8\n",
+        "\n",
+        "8 doubled is 16\n",
+        "\n",
+        "and so on.\n",
+        "\n",
+        "We stop at 128 because that value is greater than 100."
+      ],
+      "metadata": {
+        "id": "HZeRC0UnokH3"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def double_it():\n",
+        "  # Get user input\n",
+        "  user_input = int(input(\"Enter a Number :\"))\n",
+        "\n",
+        "  # While loop\n",
+        "  while user_input <= 100:\n",
+        "    user_input = 2 * user_input\n",
+        "    print(user_input, end=\" \")\n",
+        "double_it()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9qGHshzKuW45",
+        "outputId": "1cfc8c2e-82ae-450c-ed55-7b0c0dea69a9"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a Number :2\n",
+            "4 8 16 32 64 128 "
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMZ+tKa/E8yzS8rJkc7rDow",
+      "authorship_tag": "ABX9TyNQ7KQWPmhdZHGKsJJW6QF0",
       "include_colab_link": true
     },
     "kernelspec": {
