--- a/Joke_Bot_(P_01).ipynb
+++ b/Joke_Bot_(P_01).ipynb
@@ -60,15 +60,33 @@
         "joke_bot()"
       ],
       "metadata": {
-        "id": "Xuto-qn-2D6a"
+        "id": "Xuto-qn-2D6a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e556a838-3300-4445-f534-4c315ef084bd"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "PROMPTjoke\n",
+            "joke\n",
+            "Here is a joke for you!\n",
+            "Sophia is heading out to the grocery store.\n",
+            "A programmer tells her: get a liter of milk, and if they have eggs, get 12.\n",
+            "Sophia returns with 13 liters of milk.\n",
+            "The programmer asks why and Sophia replies: 'because they had eggs'\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "#Problem Statement\n",
+        "#2. Problem Statement\n",
         "Write a program that asks a user to enter a number. Your program will then double that number and print out the result. It will repeat that process until the value is 100 or greater.\n",
         "\n",
         "For example if the user enters the number 2 you would then print:\n",
@@ -127,7 +145,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNQ7KQWPmhdZHGKsJJW6QF0",
+      "authorship_tag": "ABX9TyPq4vB10adprTKMS6mSG7fh",
       "include_colab_link": true
     },
     "kernelspec": {
