--- a/Joke_Bot_(P_01).ipynb
+++ b/Joke_Bot_(P_01).ipynb
@@ -86,7 +86,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#2. Problem Statement\n",
+        "#2. Double It\n",
         "Write a program that asks a user to enter a number. Your program will then double that number and print out the result. It will repeat that process until the value is 100 or greater.\n",
         "\n",
         "For example if the user enters the number 2 you would then print:\n",
@@ -140,12 +140,63 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#3. Liftoff\n",
+        "Write a program that prints out the calls for a spaceship that is about to launch. Countdown from 10 to 1 and then output Liftoff!\n",
+        "\n",
+        "Here's a sample run of the program:\n",
+        "\n",
+        "10 9 8 7 6 5 4 3 2 1 Liftoff!\n",
+        "\n",
+        "There are many ways to solve this problem. One approach is to use a for loop, and to use the for loop variable i. Recall that i will keep track of how many times the for loop has completed executing its body. As an example this code:"
+      ],
+      "metadata": {
+        "id": "8tDcXYWZ0EXP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# for loop\n",
+        "def Count_down1():\n",
+        "  for i in range(10,0,-1):\n",
+        "    print(i, end=\" \")\n",
+        "  print(\"Liftoff!\")\n",
+        "\n",
+        "# for countdown\n",
+        "Number_list = [10,9,8,7,6,5,4,3,2,1,]\n",
+        "def Count_down2():\n",
+        "  for i in Number_list:\n",
+        "    print(i, end=\" \")\n",
+        "  print(\"Liftoff!\")\n",
+        "Count_down2()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "3QLEAQXl0dSH",
+        "outputId": "385fa9d5-44de-4ffe-99ae-e824f7527f96"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10 9 8 7 6 5 4 3 2 1 Liftoff!\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPq4vB10adprTKMS6mSG7fh",
+      "authorship_tag": "ABX9TyNZrtYLDRsFIqAWxOeNos2z",
       "include_colab_link": true
     },
     "kernelspec": {
