--- a/(Piaic_01).ipynb
+++ b/(Piaic_01).ipynb
@@ -191,12 +191,89 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#4. Guess My Number\n",
+        "\n",
+        "I am thinking of a number between 0 and 99... Enter a guess: 50 Your guess is too high\n",
+        "\n",
+        "Enter a new number: 25 Your guess is too low\n",
+        "\n",
+        "Enter a new number: 40 Your guess is too low\n",
+        "\n",
+        "Enter a new number: 45 Your guess is too low\n",
+        "\n",
+        "Enter a new number: 48 Congrats! The number was: 48"
+      ],
+      "metadata": {
+        "id": "BLsgBRHZ7oKO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Computer generate and save a number using random\n",
+        "import random\n",
+        "\n",
+        "random_generated_num: int = random.randint(1,9)\n",
+        "\n",
+        "allowed_attempts: int = 5\n",
+        "user_attempts: int = 0\n",
+        "\n",
+        "while user_attempts < allowed_attempts:\n",
+        "    # Get user number\n",
+        "    user_input = int(input(\"Enter a number :\"))\n",
+        "    user_attempts += 1\n",
+        "    # If statement:\n",
+        "      # elif only comparison\n",
+        "    if user_input == random_generated_num:\n",
+        "      print(\"Congrats! The number was:\", random_generated_num)\n",
+        "      break\n",
+        "    elif user_input < random_generated_num:\n",
+        "      print(\"Your guess is too low\")\n",
+        "    elif user_input > random_generated_num:\n",
+        "      print(\"Your guess is too high\")\n",
+        "    else:\n",
+        "      print(\"Congrats! The number was:\", random_generated_num)\n",
+        "\n",
+        "    if (user_attempts == allowed_attempts):\n",
+        "      print(\"Game Over\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bVGxknj_7n4f",
+        "outputId": "04f6b605-74ca-4d3f-83f9-64c6a4856d99"
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number :1\n",
+            "Your guess is too low\n",
+            "Enter a number :4\n",
+            "Your guess is too high\n",
+            "Enter a number :7\n",
+            "Your guess is too high\n",
+            "Enter a number :9\n",
+            "Your guess is too high\n",
+            "Enter a number :5\n",
+            "Your guess is too high\n",
+            "Game Over\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNZrtYLDRsFIqAWxOeNos2z",
+      "authorship_tag": "ABX9TyOIHB0cA/BFVlsDOMll0wcw",
       "include_colab_link": true
     },
     "kernelspec": {
