--- a/(Piaic_01).ipynb
+++ b/(Piaic_01).ipynb
@@ -268,12 +268,89 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#5. Random Number\n",
+        "Print 10 random numbers in the range 1 to 100.\n",
+        "\n",
+        "Here is an example run:\n",
+        "\n",
+        "45 79 61 47 52 10 16 83 19 12\n",
+        "\n",
+        "Each time you run your program you should get different numbers\n",
+        "\n",
+        "81 76 70 1 27 63 96 100 32 92\n",
+        "\n",
+        "Recall that the python random library has a function randint which returns an integer in the range set by the parameters (inclusive). For example this call would produce a random integer between 1 and 6, which could include 1 and could include 6:\n",
+        "\n",
+        "value = random.randint(1, 6)"
+      ],
+      "metadata": {
+        "id": "wUF7QZLwNH3g"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import random\n",
+        "Minimum_number: int = 1\n",
+        "Maximum_number: int = 100\n",
+        "N_random_numbers: int = 10\n",
+        "\n",
+        "number_list = []\n",
+        "for i in range(N_random_numbers):\n",
+        "  random_number = random.randint(Minimum_number, Maximum_number)\n",
+        "  number_list.append(random_number)\n",
+        "  print(random.randint(Minimum_number, Maximum_number), end=\" \")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "qoeavD2RNSz3",
+        "outputId": "8500de40-f80b-446c-a62c-2291272a3959"
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "33 79 49 3 51 44 74 59 75 21 "
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(*number_list)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iJpFU0yzQcLW",
+        "outputId": "4f9e7827-3724-46fc-c9b1-455a62cecf1a"
+      },
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "42 28 76 23 8 49 95 44 43 90\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOIHB0cA/BFVlsDOMll0wcw",
+      "authorship_tag": "ABX9TyNhI3H2n/YPp3ql9QEUbizx",
       "include_colab_link": true
     },
     "kernelspec": {
