--- a/(Piaic_01).ipynb
+++ b/(Piaic_01).ipynb
@@ -345,12 +345,108 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#6(a). Planetary Weight Calculator\n",
+        "Milestone #1: Mars Weight\n",
+        "A few years ago, NASA made history with the first controlled flight on another planet. Its latest Mars Rover, Perseverance, has onboard a 50cm high helicopter called Ingenuity. Ingenuity made its third flight, during which it flew faster and further than it had on any of its test flights on Earth. Interestingly, Ingenuity uses Python for some of its flight modeling software!\n",
+        "\n",
+        "Ingenuity on the surface of Mars (source: NASA)\n",
+        "\n",
+        "When programming Ingenuity, one of the things that NASA engineers need to account for is the fact that due to the weaker gravity on Mars, an Earthling's weight on Mars is 37.8% of their weight on Earth. Write a Python program that prompts an Earthling to enter their weight on Earth and prints their calculated weight on Mars.\n",
+        "\n",
+        "The output should be rounded to two decimal places when necessary. Python has a round function which can help you with this. You pass in the value to be rounded and the number of decimal places to use. In the example below, the number 3.1415926 is rounded to 2 decimal places which is 3.14."
+      ],
+      "metadata": {
+        "id": "vy9UEu1yUuUK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Planetary Constants\n",
+        "Mars_constant: float = 0.378\n",
+        "Mercury_constant: float = 0.376\n",
+        "MERCURY_CONSTANT: float = 0.376\n",
+        "VENUS_CONSTANT: float = 0.889\n",
+        "MARS_CONSTANT: float = 0.378\n",
+        "JUPITER_CONSTANT: float = 2.360\n",
+        "SATURN_CONSTANT: float = 1.081\n",
+        "URANUS_CONSTANT: float = 0.815\n",
+        "NEPTUNE_CONSTANT: float = 1.140\n",
+        "\n",
+        "\n",
+        "def planet_weight_calculator():\n",
+        "  # Milestone 01 (Weight on earth)\n",
+        "  User_weight: float = float (input(\"What is your weight on earth? \"))\n",
+        "\n",
+        "  # Milestone 02 (weight on other Planets )\n",
+        "  Planet_name: str = input(\"What is you planet name? \")\n",
+        "\n",
+        "  # Milestone 03 (Which planets constant?)\n",
+        "  gravity_constant = 0\n",
+        "  if Planet_name.lower == \"mars\":\n",
+        "    gravity_constant = MARS_CONSTANT\n",
+        "  elif Planet_name.lower == \"mercury\":\n",
+        "    gravity_constant = MERCURY_CONSTANT\n",
+        "  elif Planet_name.lower == \"venus\":\n",
+        "    gravity_constant = VENUS_CONSTANT\n",
+        "  elif Planet_name.lower == \"jupiter\":\n",
+        "    gravity_constant = JUPITER_CONSTANT\n",
+        "  elif Planet_name.lower == \"saturn\":\n",
+        "    gravity_constant = SATURN_CONSTANT\n",
+        "  elif Planet_name.lower == \"uranus\":\n",
+        "    gravity_constant = URANUS_CONSTANT\n",
+        "  elif Planet_name.lower == \"neptune\":\n",
+        "    gravity_constant = NEPTUNE_CONSTANT\n",
+        "  else:\n",
+        "    return\"Invalid Planet Name\"\n",
+        "\n",
+        "  weight = round((User_weight * MARS_CONSTANT),2)\n",
+        "  return f\"Your weight on {Planet_name} is: {weight}\"\n",
+        "\n",
+        "my_weight_on_mars = planet_weight_calculator()\n",
+        "print(my_weight_on_mars)"
+      ],
+      "metadata": {
+        "id": "n0lSp5A6dNB-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_weight_on_mars = planet_weight_calculator()\n",
+        "print(my_weight_on_mars)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QtsxxjgdtfKl",
+        "outputId": "e0d98928-f7f2-450d-ab6a-29bcff3342c3"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "What is your weight on earth? 80\n",
+            "What is you planet name? neptune\n",
+            "Invalid Planet Name\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNhI3H2n/YPp3ql9QEUbizx",
+      "authorship_tag": "ABX9TyNCPJL+RrXwaDHvmpci1m6l",
       "include_colab_link": true
     },
     "kernelspec": {
