--- a/00_helloworld_ai_api/Prompting.ipynb
+++ b/00_helloworld_ai_api/Prompting.ipynb
@@ -219,7 +219,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "id": "UTgRAmEHOaAz"
       },
@@ -242,36 +242,41 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "id": "Aoil5YiTgbZS",
-        "outputId": "14121ab7-c3fb-4686-8035-f859c931a2c2"
+        "outputId": "400109ba-70cb-471d-dcf9-7d943b2e41a4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 315
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "```json\n",
             "{\n",
-            " \"description\": \"The Jetpack Backpack is a backpack that looks like a normal backpack but has retractable boosters that allow the wearer to fly. It has a padded strap support, fits a 18 inch laptop, and has a USB-C charging port with 15-minute battery life. The boosters are steam-powered and green/clean.\",\n",
-            " \"features\": [\n",
-            "  \"Looks like a normal backpack\",\n",
-            "  \"Padded strap support\",\n",
-            "  \"Fits 18\\\" laptop\",\n",
-            "  \"Retractable boosters\",\n",
-            "  \"USB-C charging\",\n",
-            "  \"15-minute battery life\",\n",
-            "  \"Steam-powered\",\n",
-            "  \"Green/clean\"\n",
-            " ]\n",
+            "  \"description\": \"This is a concept for a jetpack backpack. It looks like a normal backpack, but it has retractable boosters that allow it to function as a jetpack. It is lightweight and has padded straps for support. It is powered by steam, making it a green and clean mode of transportation.  The battery life is 15 minutes, and it charges via USB-C.  It can fit an 18-inch laptop.\",\n",
+            "  \"features\": [\n",
+            "    \"Looks like a normal backpack\",\n",
+            "    \"Lightweight\",\n",
+            "    \"Padded strap support\",\n",
+            "    \"Fits 18\\\" laptop\",\n",
+            "    \"Retractible boosters\",\n",
+            "    \"Steam-powered\",\n",
+            "    \"Green/clean\",\n",
+            "    \"15-minute battery life\",\n",
+            "    \"USB-C charging\"\n",
+            "  ]\n",
             "}\n",
             "```\n"
           ]
         }
       ],
       "source": [
-        "model = genai.GenerativeModel('gemini-1.5-flash')\n",
+        "model = genai.GenerativeModel('gemini-1.5-pro')\n",
         "response = model.generate_content([prompt, img])\n",
         "print(response.text)"
       ]
@@ -291,7 +296,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "id": "ZKAtY5oIPQW0"
       },
@@ -303,17 +308,21 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 14,
       "metadata": {
         "id": "9tXNVnqxPcXy",
-        "outputId": "2c8cf43e-bafa-4c61-e7a6-a5dfd52bed82"
+        "outputId": "6223a179-6663-403b-91f0-16c76cf23dab",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
-            "A computer is like a super smart toy that follows instructions from you, using numbers and lights to do amazing things! \n",
+            "A computer follows instructions, like a recipe, to do things with numbers and pictures.\n",
             "\n"
           ]
         }
@@ -334,22 +343,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {
         "id": "dHwrC82YPiWS",
-        "outputId": "1405d4c6-1049-4088-dde2-a492e63083aa"
+        "outputId": "b0169016-a92f-416f-d711-2ff606e6e8df",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "[parts {\n",
             "  text: \"In one sentence, explain how a computer works to a young child.\"\n",
             "}\n",
             "role: \"user\"\n",
             ", parts {\n",
-            "  text: \"A computer is like a super smart toy that follows instructions from you, using numbers and lights to do amazing things! \\n\"\n",
+            "  text: \"A computer follows instructions, like a recipe, to do things with numbers and pictures.\\n\"\n",
+            "}\n",
+            "role: \"model\"\n",
+            ", parts {\n",
+            "  text: \"Okay, how about a more detailed explanation to a high schooler?\"\n",
+            "}\n",
+            "role: \"user\"\n",
+            ", parts {\n",
+            "  text: \"A computer works by executing a sequence of instructions, called a program, that manipulate data stored in its memory.  These instructions are translated into machine code, a series of binary digits (0s and 1s), that the computer\\'s central processing unit (CPU) interprets and executes, performing operations like arithmetic, logic, and data movement, ultimately producing the desired output.\\n\"\n",
             "}\n",
             "role: \"model\"\n",
             "]\n"
@@ -371,11 +391,25 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
-        "id": "-fXZZQPzPkie"
+        "id": "-fXZZQPzPkie",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 72
+        },
+        "outputId": "93aa3792-370e-4940-a9d4-e2477578022d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "A computer works by executing a sequence of instructions, called a program, that manipulate data stored in its memory.  These instructions are translated into machine code, a series of binary digits (0s and 1s), that the computer's central processing unit (CPU) interprets and executes, performing operations like arithmetic, logic, and data movement, ultimately producing the desired output.\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "response = chat.send_message(\"Okay, how about a more detailed explanation to a high schooler?\")\n",
         "print(response.text)"
@@ -405,7 +439,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 18,
       "metadata": {
         "id": "28477e706226"
       },
@@ -432,7 +466,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {
         "id": "f895c7f55b30"
       },
@@ -447,11 +481,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
-        "id": "c97c16e6a961"
+        "id": "c97c16e6a961",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "de4052bb-ff4d-4c55-c969-a0536e0033c1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1. Cats can make over 100 different sounds, while dogs can only make about 10.\n",
+            "\n",
+            "2. A cat's purr has been shown to have healing properties, potentially aiding bone growth and wound healing.\n",
+            "\n",
+            "3.  Cats can jump up to six times their height.\n",
+            "\n",
+            "4.  A group of cats is called a clowder.\n",
+            "\n",
+            "5.  Cats spend about 70% of their lives sleeping.\n",
+            "\n"
+          ]
+        }
+      ],
       "source": [
         "print(response.text)"
       ]
