--- a/Function_calling_config.ipynb
+++ b/Function_calling_config.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Abdullah-Khan-1992/PIAIC/blob/main/Function_calling_config.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Tce3stUlHN0L"
       },
       "source": [
@@ -11,7 +21,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 20,
       "metadata": {
         "cellView": "form",
         "id": "tuOe1ymfHZPu"
@@ -59,7 +69,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 21,
       "metadata": {
         "id": "m4DhA4907Asz"
       },
@@ -79,7 +89,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 22,
       "metadata": {
         "id": "wp3W4Pdf8rBO"
       },
@@ -106,7 +116,55 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "source": [
+        "# prompt: create a dictionary of 10 students with their education level random and roll numbers 1 to 10 with random grade in which they are reading show details of students using input for roll number\n",
+        "\n",
+        "import random\n",
+        "\n",
+        "def create_student_data():\n",
+        "  \"\"\"Creates a dictionary of student data with random attributes.\"\"\"\n",
+        "  students = {}\n",
+        "  for i in range(1, 11):\n",
+        "    students[i] = {\n",
+        "        'education_level': random.choice(['High School', 'Undergraduate', 'Postgraduate']),\n",
+        "        'grade': random.choice(['A', 'B', 'C', 'D', 'F'])\n",
+        "    }\n",
+        "  return students\n",
+        "\n",
+        "def show_student_details(students):\n",
+        "  \"\"\"Shows details of a student based on roll number input.\"\"\"\n",
+        "  while True:\n",
+        "    try:\n",
+        "      roll_number = int(input(\"Enter the roll number (1-10) or 0 to exit: \"))\n",
+        "      if roll_number == 0:\n",
+        "        break\n",
+        "      if 1 <= roll_number <= 10:\n",
+        "        if roll_number in students:\n",
+        "          print(f\"Roll Number: {roll_number}\")\n",
+        "          print(f\"Education Level: {students[roll_number]['education_level']}\")\n",
+        "          print(f\"Grade: {students[roll_number]['grade']}\")\n",
+        "        else:\n",
+        "          print(f\"Student with roll number {roll_number} not found.\")\n",
+        "      else:\n",
+        "        print(\"Invalid roll number. Please enter a number between 1 and 10.\")\n",
+        "    except ValueError:\n",
+        "      print(\"Invalid input. Please enter a valid integer.\")\n",
+        "\n",
+        "# Create student data\n",
+        "student_data = create_student_data()\n",
+        "\n",
+        "# Show student details based on user input\n",
+        "show_student_details(student_data)"
+      ],
+      "metadata": {
+        "id": "WHogquzxTWjB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 23,
       "metadata": {
         "id": "gLS26n7A9l9B"
       },
@@ -148,7 +206,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 24,
       "metadata": {
         "id": "_QgLFPL4Chon"
       },
@@ -178,10 +236,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 25,
       "metadata": {
         "id": "6ZlIFwXqGA09",
-        "outputId": "673d1e64-9ceb-4737-a920-1ba511181787",
+        "outputId": "ae6760a8-2304-4895-c971-ad739511df6c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
@@ -219,10 +277,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 26,
       "metadata": {
         "id": "vwO9dUjvHoT8",
-        "outputId": "d382218b-034e-4054-e921-296f37d4f0f9",
+        "outputId": "8eae7cb0-65f1-462d-afbb-3981e8a882af",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 126
@@ -265,10 +323,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 27,
       "metadata": {
         "id": "GQpz94zrCNJF",
-        "outputId": "c7077970-ce08-45b0-e491-2e6ce0742999",
+        "outputId": "88facffe-05fc-486f-8a80-e74f4b0c6dae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 236
@@ -316,10 +374,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 28,
       "metadata": {
         "id": "hx7aIX8OXvi6",
-        "outputId": "ec13ca1a-ad71-4726-e7e4-24e8898e6316",
+        "outputId": "9aa4c6dd-e6e8-4a4f-8f00-3b21e35cb00e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 509
@@ -353,7 +411,7 @@
               "            \"role\": \"model\"\n",
               "          },\n",
               "          \"finish_reason\": \"STOP\",\n",
-              "          \"avg_logprobs\": -0.056182061632474266\n",
+              "          \"avg_logprobs\": -0.05618581175804138\n",
               "        }\n",
               "      ],\n",
               "      \"usage_metadata\": {\n",
@@ -366,7 +424,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 10
+          "execution_count": 28
         }
       ],
       "source": [
@@ -392,7 +450,9 @@
   "metadata": {
     "colab": {
       "name": "Function_calling_config.ipynb",
-      "provenance": []
+      "toc_visible": true,
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
